# Sentiment-Analysis

./: CMakeLists.txt  Classifier.h  DSString.cpp  DSString.h  FileManagement.cpp  FileManagement.h  README.md  catch.hpp  main.cpp  test.cpp
.github/workflows/: cmake.yml
